# ComfyUI_ExtraModels

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
DiT/: conf.py  loader.py  model.py  nodes.py
Gemma/: nodes.py
HunYuan/: conf.py  loader.py  nodes.py  wf.json
HunYuan/models/: models.py  text_encoder.py
HunYuanDiT/: conf.py  config_mt5.json  loader.py  nodes.py  tenc.py
HunYuanDiT/models/: attn_layers.py  models.py
HunYuanDiT/mt5_tokenizer/: config.json
IPEX/: attention.py
MiaoBi/: MiaoBi_clip.json  diffusers_load.py  nodes.py  sd.py  sd1_clip.py  tokenizer.py
MiaoBi/tokenizer/: clip_tokenizer_roberta.py  tokenizer_config.json
PixArt/: conf.py  config.py  diffusers_convert.py  loader.py  lora.py  nodes.py  sampler.py
PixArt/model/: blocks.py  pixart.py  pixartms.py
PixArt/models/: PixArt.py  PixArtMS.py  PixArt_blocks.py  blocks.py  pixart.py
PixArt/sampling/: dpm_solver.py
Sana/: conf.py  diffusers_convert.py  loader.py  lora.py  nodes.py
Sana/models/: act.py  basic_modules.py  norms.py  sana.py  sana_blocks.py  sana_multi_scale.py  utils.py
T5/: loader.py  nodes.py  t5v11-xxl_config.json  t5v11.py
VAE/: conf.py  loader.py  nodes.py
VAE/models/: consistencydecoder.py  dcae.py  dcae_key_mapping.py  kl.py  movq3.py  temporal_ae.py  vq.py
text_encoders/: nodes.py  tenc.py
text_encoders/pixart/: tenc.py
text_encoders/sana/: config.json  gemma.py  tenc.py
text_encoders/tokenizers/gemma_tokenizer/: tokenizer_config.json
utils/: dtype.py  loader.py  lookup.py  nodes.py  offload.py
utils/IPEX/: attention.py
